--- a/manifest.json
+++ b/manifest.json
@@ -5,14 +5,14 @@
   "version": "1",
   "author": "imhta",
   "icons": {
-    "128": "asserts/icon.png"
+    "128": "assets/icon.png"
   },
   "permissions": ["contextMenus"],
   "background": {
     "scripts": ["src/background.js"]
   },
   "browser_action": {
-    "default_icon": "asserts/icon.png",
+    "default_icon": "assets/icon.png",
     "default_title": "Start writing",
     "default_popup": "pop.html"
   },
